force-app/main/default/objects/Bet__c/Bet__c.object-meta.xml
<CustomObject>
    <description>Actual bet.</description>
    <label>Bet</label>
    <nameField>
        <displayFormat>BET-{000000}</displayFormat>
        <label>Bet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>