force-app/main/default/objects/Bet__c/fields/Lot__c.field-meta.xml
<CustomField>
    <fullName>Lot__c</fullName>
    <description>A number of lot Player expects to win.</description>
    <label>Lot</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>