force-app/main/default/objects/Bet__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <label>Player</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Player__c.Total_Money_Won__c</field>
            <operation>greaterOrEqual</operation>
            <value>0</value>
        </filterItems>
        <filterItems>
            <field>Player__c.Total_Money_Won__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Player__c</referenceTo>
    <relationshipLabel>Bets</relationshipLabel>
    <relationshipName>Bets</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>