force-app/main/default/objects/Bet__c/fields/Win_Rate__c.field-meta.xml
<CustomField>
    <fullName>Win_Rate__c</fullName>
    <description>Percent indicating how much money Player wins (9 means *1.09)</description>
    <label>Win Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>