force-app/main/default/objects/Bet__c/validationRules/BlackList.validationRule-meta.xml
<ValidationRule>
    <fullName>BlackList</fullName>
    <active>true</active>
    <description>Do not create the bet for a player in the blacklist.</description>
    <errorConditionFormula>(Player__r.Is_Black_List__c) &amp;&amp; ISNEW()</errorConditionFormula>
    <errorMessage>Bet cannot be created for the player in the blacklist.</errorMessage>
</ValidationRule>