force-app/main/default/objects/Bet__c/validationRules/LateBet.validationRule-meta.xml
<ValidationRule>
    <fullName>LateBet</fullName>
    <active>true</active>
    <description>Forbid creation of the bet after the game is started.</description>
    <errorConditionFormula>(Game__r.Start_Date__c &lt;  NOW() ) &amp;&amp;  ISNEW()</errorConditionFormula>
    <errorMessage>Bet cannot be created after the start of the Game.</errorMessage>
</ValidationRule>